Client sends a message to correct recipient.